Following changes are done in this commit to fix multiple failures.
1. Integrated oracle linux (OL) 8 image instead of centos8.
2. Integrated OL-9 image into workflows.
3. Updating patroni and pg_stat_monitor testing from centos8 to ol8.
4. Install perl module Benchmark needed on ol-9 to check pgbadger.
5. Install pip on ol-9.
6. Fixed pgsm regression dependencies on ppg 11~15.
7. Added ol-8 and ol-9 for ha and meta-server. Updated the ha and meta-server scripts to accommodate ol-8 and ol-9.
8. Added conditional install of pgpool based on ppg version >= 15.2.
9. Added ol-8 & ol-9 to ppg15 minor upgrade.
10. Done minor update after using t2.small instead of t2.micro.
11. Changes to accommodate the pg-14-major upgrade.
12. Changes for pg-15-components-with-vanilla.
13. Fixed pgBouncer regression failure on pg-15.
14. Fixed pgBackrest regression failure on pg-15.
15. Changes for PGSM 2.0.1 release.

--- a/pg_stat_monitor/ppg-15/tasks/main.yml
+++ b/pg_stat_monitor/ppg-15/tasks/main.yml
@@ -1,4 +1,5 @@
-  
+---
+
   - name: Configure repository
     include_tasks: ../../../../tasks/enable_repo.yml
 
@@ -14,36 +15,9 @@
     command: dnf clean all -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Find all of the files inside /etc/yum.repos.d directory
-    find:
-      paths: "/etc/yum.repos.d/"
-      patterns: "*.repo"
-    register: repos
-
-  - name: Comment 'mirrorlist' in /etc/yum.repos.d/*.repo files
-    replace:
-      path: "{{ item.path }}"
-      regexp: 'mirrorlist'
-      replace: '#mirrorlist'
-    with_items: "{{ repos.files }}"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Replace 'baseurl' in /etc/yum.repos.d/*.repo files
-    replace:
-      path: "{{ item.path }}"
-      regexp: '#baseurl=http://mirror.centos.org'
-      replace: 'baseurl=http://vault.centos.org'
-    with_items: "{{ repos.files }}"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Update dnf RHEL8
+  - name: Enable ol8_codeready_builder on oracle linux 8
     become: true
-    command: dnf update -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Enable powertools RHEL8
-    become: true
-    command: dnf config-manager --set-enabled powertools
+    command: dnf config-manager --set-enabled ol8_codeready_builder
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Disable dnf module for RHEL8
@@ -79,18 +53,6 @@
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
     when: ansible_os_family == "RedHat"
 
-  - name: Install Development tools
-    become: true
-    command: yum -y groupinstall "Development tools"
-    environment:
-      PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-    when: ansible_os_family == "RedHat"
-
-  # - name: Disable llvm-toolset dnf module for RHEL8
-  #   become: true
-  #   command: dnf module disable llvm-toolset -y
-  #   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
   - name: install Percona Platform for PostgreSQL rpm packages for RHEL
     yum:
       name: "{{ packages }}"
@@ -105,7 +67,6 @@
       - percona-postgresql15-contrib
       - percona-postgresql15-devel
       - percona-postgresql15-libs
-      - percona-postgresql15-llvmjit
       - percona-postgresql15-plperl
       - percona-postgresql15-plpython3
       - percona-postgresql15-pltcl
@@ -119,13 +80,25 @@
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
+  - name: Install Development tools
+    become: true
+    command: yum -y groupinstall "Development tools"
+    environment:
+      PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+    when: ansible_os_family == "RedHat"
+
+  - name: Enable llvm-toolset dnf module for RHEL8
+    become: true
+    command: dnf module enable llvm-toolset -y
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
   - name: Install llvm-toolset
     become: true
     command: yum install -y llvm-toolset
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
     when: ansible_os_family == "RedHat"
-  
+
   - name: Clone pg_stat_monitor sources
     git:
       repo: "{{ repo }}"
