--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -13,27 +13,27 @@
     #   shell: "sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-Linux-*"
     #   when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "8"
 
-    - name: Find all of the files inside /etc/yum.repos.d directory
-      find:
-        paths: "/etc/yum.repos.d/"
-        patterns: "*.repo"
-      register: repos
+    # - name: Find all of the files inside /etc/yum.repos.d directory
+    #   find:
+    #     paths: "/etc/yum.repos.d/"
+    #     patterns: "*.repo"
+    #   register: repos
 
-    - name: Comment 'mirrorlist' in /etc/yum.repos.d/*.repo files
-      replace:
-        path: "{{ item.path }}"
-        regexp: 'mirrorlist'
-        replace: '#mirrorlist'
-      with_items: "{{ repos.files }}"
-      when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+    # - name: Comment 'mirrorlist' in /etc/yum.repos.d/*.repo files
+    #   replace:
+    #     path: "{{ item.path }}"
+    #     regexp: 'mirrorlist'
+    #     replace: '#mirrorlist'
+    #   with_items: "{{ repos.files }}"
+    #   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-    - name: Replace 'baseurl' in /etc/yum.repos.d/*.repo files
-      replace:
-        path: "{{ item.path }}"
-        regexp: '#baseurl=http://mirror.centos.org'
-        replace: 'baseurl=http://vault.centos.org'
-      with_items: "{{ repos.files }}"
-      when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+    # - name: Replace 'baseurl' in /etc/yum.repos.d/*.repo files
+    #   replace:
+    #     path: "{{ item.path }}"
+    #     regexp: '#baseurl=http://mirror.centos.org'
+    #     replace: 'baseurl=http://vault.centos.org'
+    #   with_items: "{{ repos.files }}"
+    #   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
     - name: setup ca-certificates release
       yum:
@@ -168,7 +168,7 @@
       yum:
         name: "{{ packages }}"
         state: latest
-        enablerepo: powertools
+        enablerepo: ol8_codeready_builder
         update_cache: yes
       vars:
         packages:
