--- a/ppg/pg-15-major-upgrade/playbooks/cleanup.yml
+++ b/ppg/pg-15-major-upgrade/playbooks/cleanup.yml
@@ -1,4 +1,33 @@
 ---
+- name: Fix broken
+  hosts: all
+  become: true
+  become_method: sudo
+  tasks:
+    - name: Fix Postgresql-14 deb packages
+      apt:
+        name: "{{ packages }}"
+        state: fixed
+        update_cache: true
+      vars:
+        packages:
+          - percona-postgresql-14
+          - percona-postgresql-14-dbgsym
+          - percona-postgresql-client-14
+          - percona-postgresql-doc-14
+          - percona-postgresql-plperl-14
+          - percona-postgresql-plpython3-14
+          - percona-postgresql-pltcl-14
+          - percona-postgresql-server-dev-14
+          - percona-postgresql-client-14-dbgsym
+          - percona-postgresql-plperl-14-dbgsym
+          - percona-postgresql-plpython3-14-dbgsym
+          - percona-postgresql-pltcl-14-dbgsym
+          - percona-pg-stat-monitor14
+          - percona-pgaudit14-set-user
+          - percona-postgresql-14-wal2json
+      when: ansible_os_family == "Debian"
+
 - name: Cleanup
   hosts: all
   become: true
@@ -8,35 +37,39 @@
       apt:
         name: "{{ packages }}"
         state: absent
-        update_cache: yes
+        update_cache: true
       vars:
         packages:
           - percona-postgresql-14
+          - percona-postgresql-14-dbgsym
           - percona-postgresql-client-14
           - percona-postgresql-doc-14
           - percona-postgresql-plperl-14
           - percona-postgresql-plpython3-14
           - percona-postgresql-pltcl-14
           - percona-postgresql-server-dev-14
-          - percona-postgresql-14-dbgsym
           - percona-postgresql-client-14-dbgsym
           - percona-postgresql-plperl-14-dbgsym
           - percona-postgresql-plpython3-14-dbgsym
           - percona-postgresql-pltcl-14-dbgsym
+          - percona-pg-stat-monitor14
+          - percona-pgaudit14-set-user
+          - percona-postgresql-14-wal2json
+      ignore_errors: true
       when: ansible_os_family == "Debian"
 
-    - name: Remove Percona Platform for PostgreSQL deb packages
-      apt:
-        name: "{{ packages }}"
-        state: absent
-      vars:
-        packages:
-        - percona-postgresql-plpython-14
-        - percona-postgresql-plpython-14-dbgsym
-        - percona-postgresql-server-dev-14-dbgsym
-      when:
-        - ansible_os_family == "Debian"
-        - lookup('env', 'PG_VERSION') == "ppg-14.5"
+    # - name: Remove Percona Platform for PostgreSQL deb packages
+    #   apt:
+    #     name: "{{ packages }}"
+    #     state: absent
+    #   vars:
+    #     packages:
+    #     - percona-postgresql-plpython-14
+    #     - percona-postgresql-plpython-14-dbgsym
+    #     - percona-postgresql-server-dev-14-dbgsym
+    #   when:
+    #     - ansible_os_family == "Debian"
+    #     - lookup('env', 'PG_VERSION') == "ppg-14.5"
 
     - name: remove Postgresql rpm packages
       yum:
@@ -68,21 +101,21 @@
           - percona-postgresql14-server-debuginfo
       when: ansible_os_family == "RedHat"
 
-    - name: remove pgaudit deb packages
-      apt:
-        name: percona-postgresql-14-pgaudit
-        state: absent
-      when: ansible_os_family == "Debian"
+    # - name: remove pgaudit deb packages
+    #   apt:
+    #     name: percona-postgresql-14-pgaudit
+    #     state: absent
+    #   when: ansible_os_family == "Debian"
 
-    - name: remove pg_repack deb packages
-      apt:
-        name: "{{ packages }}"
-        state: absent
-      vars:
-        packages:
-          - percona-postgresql-14-repack
-          - percona-postgresql-14-repack-dbgsym
-      when: ansible_os_family == "Debian"
+    # - name: remove pg_repack deb packages
+    #   apt:
+    #     name: "{{ packages }}"
+    #     state: absent
+    #   vars:
+    #     packages:
+    #       - percona-postgresql-14-repack
+    #       - percona-postgresql-14-repack-dbgsym
+    #   when: ansible_os_family == "Debian"
 
     - name: remove pg_repack rpm packages
       yum:
