--- a/pg_stat_monitor/ppg-13/molecule/default/molecule.yml
+++ b/pg_stat_monitor/ppg-13/molecule/default/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pgstatmon-centos8-${BUILD_NUMBER}
+  - name: pgstatmon-ol8-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-0e337c7f9752d9d34
+    image: ami-065e2293a3df4c870
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t2.medium
-    ssh_user: centos
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
