--- a/ppg/pg-15-major-upgrade/molecule/debian-10/molecule.yml
+++ b/ppg/pg-15-major-upgrade/molecule/debian-10/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0f41e297b3c53fab8
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: admin
     root_device_name: /dev/xvda
     instance_tags:
@@ -43,4 +43,3 @@ scenario:
     - verify
     - cleanup
     - destroy
-
