--- a/ppg/pg-15-minor-upgrade/playbooks/cleanup.yml
+++ b/ppg/pg-15-minor-upgrade/playbooks/cleanup.yml
@@ -33,7 +33,9 @@
       vars:
         packages:
           - percona-postgresql15
-          - percona-postgresql15
+          - percona-postgresql-client-common
+          - percona-postgresql-common
+          - percona-postgresql-server-dev-all
           - percona-postgresql15-contrib
           - percona-postgresql15-debuginfo
           - percona-postgresql15-devel
